--- a/FoodPiper/MessageTableViewCell.xib
+++ b/FoodPiper/MessageTableViewCell.xib
@@ -1,63 +1,41 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ActivityViewController" customModule="FoodPiper" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MessageCell" rowHeight="86" id="V95-oi-uMA" customClass="MessageTableViewCell" customModule="FoodPiper" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MessageCell" rowHeight="126" id="V95-oi-uMA" customClass="MessageTableViewCell" customModule="FoodPiper" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="84"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="V95-oi-uMA" id="udW-2s-vIX">
+                <rect key="frame" x="0.0" y="0.0" width="320" height="83.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j0E-ng-Bkk">
-                        <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                        <rect key="frame" x="64" y="42" width="60" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="4Uw-8g-2vT"/>
                             <constraint firstAttribute="width" constant="60" id="6Kg-dH-aVR"/>
                         </constraints>
                         <state key="normal" title="Reply"/>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="4Uw-8g-2vT"/>
-                                <exclude reference="6Kg-dH-aVR"/>
-                            </mask>
-                        </variation>
-                        <variation key="heightClass=regular-widthClass=compact">
-                            <mask key="constraints">
-                                <include reference="4Uw-8g-2vT"/>
-                                <include reference="6Kg-dH-aVR"/>
-                            </mask>
-                        </variation>
                         <connections>
                             <action selector="replyToMessageButtonPressed:" destination="-1" eventType="touchUpInside" id="6Bd-V3-ObT"/>
                         </connections>
                     </button>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I3M-4c-lz4">
-                        <rect key="frame" x="-23" y="-15" width="46" height="30"/>
+                        <rect key="frame" x="197" y="42" width="60" height="30"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="60" id="0RS-Ck-UjH"/>
                             <constraint firstAttribute="height" constant="30" id="bQN-Fn-EyN"/>
                         </constraints>
                         <state key="normal" title="Delete"/>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="bQN-Fn-EyN"/>
-                                <exclude reference="0RS-Ck-UjH"/>
-                            </mask>
-                        </variation>
-                        <variation key="heightClass=regular-widthClass=compact">
-                            <mask key="constraints">
-                                <include reference="bQN-Fn-EyN"/>
-                                <include reference="0RS-Ck-UjH"/>
-                            </mask>
-                        </variation>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="751" verticalHuggingPriority="751" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="250" translatesAutoresizingMaskIntoConstraints="NO" id="PMI-Qt-8yD">
-                        <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                        <rect key="frame" x="35" y="12" width="250" height="23"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
@@ -70,51 +48,15 @@
                     <constraint firstAttribute="bottomMargin" secondItem="I3M-4c-lz4" secondAttribute="bottom" constant="3.5" id="QC3-J8-pah"/>
                     <constraint firstItem="j0E-ng-Bkk" firstAttribute="centerX" secondItem="udW-2s-vIX" secondAttribute="centerX" constant="-66" id="T4P-VA-7dq"/>
                     <constraint firstItem="I3M-4c-lz4" firstAttribute="centerX" secondItem="udW-2s-vIX" secondAttribute="centerX" constant="67" id="dFC-2x-Mic"/>
-                    <constraint firstItem="j0E-ng-Bkk" firstAttribute="top" secondItem="PMI-Qt-8yD" secondAttribute="bottom" constant="11" id="gv5-dJ-zTU"/>
-                    <constraint firstItem="I3M-4c-lz4" firstAttribute="top" secondItem="PMI-Qt-8yD" secondAttribute="bottom" constant="11" id="nQs-UO-5o3"/>
+                    <constraint firstItem="j0E-ng-Bkk" firstAttribute="top" secondItem="PMI-Qt-8yD" secondAttribute="bottom" constant="7" id="gv5-dJ-zTU"/>
+                    <constraint firstItem="I3M-4c-lz4" firstAttribute="top" secondItem="PMI-Qt-8yD" secondAttribute="bottom" constant="7" id="nQs-UO-5o3"/>
                     <constraint firstAttribute="trailingMargin" secondItem="PMI-Qt-8yD" secondAttribute="trailing" constant="27" id="wwh-PM-uBd"/>
                 </constraints>
-                <variation key="default">
-                    <mask key="subviews">
-                        <exclude reference="j0E-ng-Bkk"/>
-                        <exclude reference="I3M-4c-lz4"/>
-                        <exclude reference="PMI-Qt-8yD"/>
-                    </mask>
-                    <mask key="constraints">
-                        <exclude reference="0pg-BG-PTY"/>
-                        <exclude reference="AdG-EO-sn3"/>
-                        <exclude reference="wwh-PM-uBd"/>
-                        <exclude reference="94u-ui-xo5"/>
-                        <exclude reference="T4P-VA-7dq"/>
-                        <exclude reference="gv5-dJ-zTU"/>
-                        <exclude reference="QC3-J8-pah"/>
-                        <exclude reference="dFC-2x-Mic"/>
-                        <exclude reference="nQs-UO-5o3"/>
-                    </mask>
-                </variation>
-                <variation key="heightClass=regular-widthClass=compact">
-                    <mask key="subviews">
-                        <include reference="j0E-ng-Bkk"/>
-                        <include reference="I3M-4c-lz4"/>
-                        <include reference="PMI-Qt-8yD"/>
-                    </mask>
-                    <mask key="constraints">
-                        <include reference="0pg-BG-PTY"/>
-                        <include reference="AdG-EO-sn3"/>
-                        <include reference="wwh-PM-uBd"/>
-                        <include reference="94u-ui-xo5"/>
-                        <include reference="T4P-VA-7dq"/>
-                        <include reference="gv5-dJ-zTU"/>
-                        <include reference="QC3-J8-pah"/>
-                        <include reference="dFC-2x-Mic"/>
-                        <include reference="nQs-UO-5o3"/>
-                    </mask>
-                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="lblMessage" destination="PMI-Qt-8yD" id="8Tk-Mu-WtS"/>
             </connections>
-            <point key="canvasLocation" x="625" y="-330"/>
+            <point key="canvasLocation" x="625" y="-350"/>
         </tableViewCell>
     </objects>
 </document>
